Move contact form button and fix section divider on small screens

--- a/web/src/scss/modules/_contact-form.scss
+++ b/web/src/scss/modules/_contact-form.scss
@@ -11,6 +11,10 @@
 
   button {
     margin-left: auto;
+
+    @media (max-width: $break-xs) {
+      margin: auto;
+    }
   }
 
   @media (max-width: $break-lg) {
